--- a/app/src/main/res/layout/fragment_new_trend.xml
+++ b/app/src/main/res/layout/fragment_new_trend.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".fragment.NewTrendFragment">
 
+
     <ImageView
         android:id="@+id/image1"
         android:layout_width="0dp"
@@ -58,6 +59,7 @@
         android:layout_marginEnd="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/item_container_new_trends"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline2" />
 
