--- a/app/src/main/res/layout/activity_view_category.xml
+++ b/app/src/main/res/layout/activity_view_category.xml
@@ -1,109 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".activities.ViewCategoryActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/white"
-        android:elevation="@dimen/sb_size_2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:id="@+id/llFilterLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingVertical="@dimen/sb_size_2"
-        android:weightSum="100"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/white"
+            android:elevation="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvSort"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="32"
-            android:gravity="center"
-            android:text="@string/sort"
-            android:textColor="@color/blue_grey_900"
-            android:textSize="@dimen/sb_text_size_16" />
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-        <TextView
-            android:id="@+id/tvCategory"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="32"
-            android:gravity="center"
-            android:text="@string/category"
-            android:textColor="@color/blue_grey_900"
-            android:textSize="@dimen/sb_text_size_16" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:id="@+id/rlFilter"
-            android:layout_width="@dimen/sb_size_0"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="36"
-            android:gravity="center_horizontal"
-            android:paddingVertical="@dimen/sb_size_8">
+                <LinearLayout
+                    android:id="@+id/llFilterLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:elevation="@dimen/sb_size_8"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingVertical="@dimen/sb_size_2"
+                    android:weightSum="100"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/tvDummyFilter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingTop="@dimen/sb_size_4"
-                android:paddingEnd="@dimen/sb_size_16"
-                android:text="@string/filter"
-                android:textColor="@color/blue_grey_900"
-                android:textSize="@dimen/sb_text_size_16" />
+                    <TextView
+                        android:id="@+id/tvSort"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="32"
+                        android:gravity="center"
+                        android:text="@string/sort"
+                        android:textColor="@color/blue_grey_900"
+                        android:textSize="@dimen/sb_text_size_16" />
 
-            <ImageView
-                android:layout_width="@dimen/sb_size_22"
-                android:layout_height="@dimen/sb_size_22"
-                android:layout_toEndOf="@+id/tvDummyFilter"
-                android:layout_marginTop="4dp"
-                android:src="@drawable/ic_filter" />
-        </RelativeLayout>
+                    <TextView
+                        android:id="@+id/tvCategory"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="32"
+                        android:gravity="center"
+                        android:text="@string/category"
+                        android:textColor="@color/blue_grey_900"
+                        android:textSize="@dimen/sb_text_size_16" />
 
-    </LinearLayout>
+                    <RelativeLayout
+                        android:id="@+id/rlFilter"
+                        android:layout_width="@dimen/sb_size_0"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_weight="36"
+                        android:gravity="center_horizontal"
+                        android:paddingVertical="@dimen/sb_size_8">
 
-    <View
-        android:id="@+id/viewSeparatorLine"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/sb_size_1"
-        android:background="@color/grey_300"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="@dimen/sb_size_20"
-        app:layout_constraintTop_toBottomOf="@id/llFilterLayout" />
+                        <TextView
+                            android:id="@+id/tvDummyFilter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:paddingTop="@dimen/sb_size_4"
+                            android:paddingEnd="@dimen/sb_size_16"
+                            android:text="@string/filter"
+                            android:textColor="@color/blue_grey_900"
+                            android:textSize="@dimen/sb_text_size_16" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvViewCategory"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:paddingVertical="@dimen/sb_size_8"
-        android:paddingHorizontal="@dimen/sb_size_4"
-        android:clipToPadding="false"
-        android:background="@color/white"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                        <ImageView
+                            android:layout_width="@dimen/sb_size_22"
+                            android:layout_height="@dimen/sb_size_22"
+                            android:layout_marginTop="4dp"
+                            android:layout_toEndOf="@+id/tvDummyFilter"
+                            android:src="@drawable/ic_filter" />
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+                <View
+                    android:id="@+id/viewSeparatorLine"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/sb_size_1"
+                    android:layout_marginHorizontal="@dimen/sb_size_20"
+                    android:background="@color/grey_300"
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/llFilterLayout" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvViewCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:background="@color/white"
+                    android:clipToPadding="false"
+                    android:paddingHorizontal="@dimen/sb_size_4"
+                    android:paddingVertical="@dimen/sb_size_8"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/viewSeparatorLine"
+                    app:spanCount="2"
+                    tools:listitem="@layout/item_view_category" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:nestedScrollingEnabled="true"
+        android:fitsSystemWindows="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/viewSeparatorLine"
-        app:spanCount="2"
-        tools:listitem="@layout/item_view_category" />
+        app:layout_constraintTop_toTopOf="parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/sheet_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:gravity="end"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imgClose"
+                        android:layout_width="@dimen/sb_size_28"
+                        android:layout_height="@dimen/sb_size_28"
+                        android:layout_gravity="end|center_vertical"
+                        android:src="@drawable/ic_close"
+                        android:layout_marginEnd="@dimen/sb_size_16"/>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/spacing_middle" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/spacing_mlarge"
+                    android:layout_marginVertical="@dimen/spacing_large"
+                    android:text="Length"
+                    android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/grey_900" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/spacing_middle" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/spacing_mlarge"
+                    android:layout_marginVertical="@dimen/spacing_large"
+                    android:text="Type"
+                    android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/blue_grey_900" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/spacing_smlarge" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/spacing_mlarge"
+                    android:layout_marginVertical="@dimen/spacing_large"
+                    android:text="Color"
+                    android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textColor="@color/grey_900" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/spacing_mlarge" />
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+    </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
