--- a/app/src/main/res/layout/activity_view_category.xml
+++ b/app/src/main/res/layout/activity_view_category.xml
@@ -19,12 +19,12 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/white"
             android:elevation="8dp"
-            android:textAlignment="center"
             android:gravity="center"
-            app:titleTextColor="@color/colorPrimary"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:titleTextColor="@color/colorPrimary" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeNoInternet"
@@ -62,6 +62,183 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/cltFilterSheet"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:elevation="@dimen/sb_size_8"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:visibility="gone"
+                    android:background="@color/transparent_shade"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <TextView
+                        android:id="@+id/tvFilterHeader"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/sb_size_60"
+                        android:text="@string/filter"
+                        android:gravity="center_vertical|start"
+                        android:paddingHorizontal="@dimen/sb_size_18"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:layout_marginTop="@dimen/sb_size_18"
+                        android:background="@drawable/bg_tv_top_curve_background"
+                        android:textSize="@dimen/sb_text_size_20"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <View
+                        android:id="@+id/separatorLine"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/grey_300"
+                        app:layout_constraintTop_toBottomOf="@id/tvFilterHeader"/>
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout3"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:orientation="horizontal"
+                        android:weightSum="100"
+                        app:layout_constraintBottom_toTopOf="@id/separatorLine2"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/separatorLine">
+
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="38"
+                            android:elevation="@dimen/sb_size_2">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@color/grey_50"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/tvCategory"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:background="@color/white"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/category"
+                                    android:textColor="@color/black"
+                                    android:textStyle="bold"
+                                    android:textSize="@dimen/sb_text_size_16" />
+
+                                <TextView
+                                    android:id="@+id/tvSize"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:background="@color/grey_50"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/size"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/sb_text_size_16" />
+
+                                <TextView
+                                    android:id="@+id/tvColor"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:background="@color/grey_50"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/color"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/sb_text_size_16" />
+
+                                <TextView
+                                    android:id="@+id/tvType"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="@dimen/sb_size_50"
+                                    android:background="@color/grey_50"
+                                    android:gravity="start|center_vertical"
+                                    android:paddingHorizontal="@dimen/sb_size_16"
+                                    android:text="@string/type"
+                                    android:textColor="@color/black"
+                                    android:textSize="@dimen/sb_text_size_16" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rvFilter"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="62"
+                            android:background="@color/white" />
+
+
+                    </LinearLayout>
+
+                    <View
+                        android:id="@+id/separatorLine2"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/grey_300"
+                        app:layout_constraintBottom_toTopOf="@id/lytOptionLayout"/>
+
+                    <LinearLayout
+                        android:id="@+id/lytOptionLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/white"
+                        android:orientation="horizontal"
+                        android:weightSum="100"
+                        android:paddingVertical="@dimen/sb_size_4"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                        <RelativeLayout
+                            android:layout_width="@dimen/sb_size_0"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="35">
+
+                            <Button
+                                android:id="@+id/btClose"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:layout_gravity="center"
+                                android:backgroundTint="@color/grey_400"
+                                android:textColor="@color/black"
+                                android:text="@string/close"/>
+                        </RelativeLayout>
+
+                        <RelativeLayout
+                            android:layout_width="@dimen/sb_size_0"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="65">
+
+                            <Button
+                                android:id="@+id/btApplyFilter"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:paddingHorizontal="@dimen/sb_text_size_22"
+                                android:text="@string/apply" />
+
+                        </RelativeLayout>
+
+
+                    </LinearLayout>
+
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvViewCategory"
                     android:layout_width="match_parent"
@@ -82,10 +259,10 @@
                     android:id="@+id/llFilterParentLayout"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/sb_size_52"
-                    android:orientation="horizontal"
-                    android:weightSum="101"
                     android:background="@color/white"
                     android:elevation="@dimen/sb_size_6"
+                    android:orientation="horizontal"
+                    android:weightSum="101"
                     app:layout_constraintBottom_toBottomOf="parent">
 
                     <!-- Sort Box-->
@@ -93,10 +270,10 @@
                         android:id="@+id/llSortLayout"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="horizontal"
                         android:layout_gravity="center"
-                        android:layout_weight="50">
+                        android:layout_weight="50"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/imgSortIcon"
@@ -117,17 +294,17 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/sort"
-                                android:textStyle="bold"
                                 android:textColor="@color/black"
-                                android:textSize="@dimen/sb_text_size_14" />
+                                android:textSize="@dimen/sb_text_size_14"
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/tvSortBy"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/sb_size_2"
                                 android:text=""
                                 android:textColor="@color/grey_900"
-                                android:layout_marginTop="@dimen/sb_size_2"
                                 android:textSize="@dimen/sb_text_size_10" />
                         </LinearLayout>
 
@@ -136,17 +313,17 @@
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="@color/grey_200"/>
+                        android:background="@color/grey_200" />
 
                     <!-- Filter Box-->
                     <LinearLayout
                         android:id="@+id/llFilterLayout"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="horizontal"
                         android:layout_gravity="center"
-                        android:layout_weight="50">
+                        android:layout_weight="50"
+                        android:gravity="center"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/imgFilterIcon"
@@ -167,17 +344,17 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/filter"
-                                android:textStyle="bold"
                                 android:textColor="@color/black"
-                                android:textSize="@dimen/sb_text_size_14" />
+                                android:textSize="@dimen/sb_text_size_14"
+                                android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/tvFilterBy"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/sb_size_2"
                                 android:text="@string/no_filter_applied"
                                 android:textColor="@color/grey_900"
-                                android:layout_marginTop="@dimen/sb_size_2"
                                 android:textSize="@dimen/sb_text_size_10" />
                         </LinearLayout>
 
