--- a/app/src/main/res/layout/item_category_type.xml
+++ b/app/src/main/res/layout/item_category_type.xml
@@ -2,27 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/clRootLayout"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginVertical="@dimen/sb_size_3"
-    android:layout_marginHorizontal="@dimen/sb_size_8"
-    android:layout_gravity="center_vertical"
-    android:background="@drawable/bg_category_type"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/sb_size_50"
+    android:background="@color/white"
     android:paddingHorizontal="@dimen/sb_size_4">
 
     <TextView
         android:id="@+id/tvCategoryType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/sb_size_8"
-        android:text="Tofffp"
-        android:gravity="center"
+        android:text="Type/Category"
+        android:gravity="start|center_vertical"
         android:textColor="@color/black"
-        android:paddingHorizontal="@dimen/sb_size_8"
+        android:paddingHorizontal="@dimen/sb_size_16"
+        android:paddingVertical="@dimen/sb_size_8"
         android:textSize="@dimen/sb_text_size_14"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/isSelected"
+        android:layout_width="@dimen/sb_size_6"
+        android:layout_height="@dimen/sb_size_6"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/sb_size_20"
+        android:background="@drawable/bg_circle"
+        app:layout_constraintTop_toTopOf="@id/tvCategoryType"
+        app:layout_constraintBottom_toBottomOf="@id/tvCategoryType"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
