--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorAccentLight">#D32F2F</color>
 
     <color name="transparent">#00FFFFFF</color>
+    <color name="transparent_shade">#74393636</color>
 
     <color name="active_tab_color">#D32F2F</color>
     <color name="inactive_tab_color">#BDBDBD</color>
