--- a/app/src/main/res/layout/item_view_category.xml
+++ b/app/src/main/res/layout/item_view_category.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:id="@+id/imgProductImage"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="260dp"
         android:layout_marginHorizontal="@dimen/sb_size_4"
         android:layout_marginVertical="@dimen/sb_size_4"
         android:scaleType="centerCrop"
@@ -20,7 +20,7 @@
         android:id="@+id/viewFavorites"
         android:layout_width="@dimen/sb_size_32"
         android:layout_height="@dimen/sb_size_32"
-        android:layout_margin="@dimen/sb_size_16"
+        android:layout_margin="@dimen/sb_size_12"
         android:background="@drawable/ic_favourite_product"
         android:padding="@dimen/sb_size_16"
         app:layout_constraintBottom_toBottomOf="@+id/imgProductImage"
@@ -30,10 +30,11 @@
         android:id="@+id/tvProductPrice"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/sb_size_12"
+        android:layout_marginTop="@dimen/sb_size_6"
+        android:layout_marginStart="@dimen/sb_size_12"
         android:text="₹ 1000"
         android:textColor="@color/blue_grey_900"
-        android:textSize="@dimen/sb_text_size_16"
+        android:textSize="@dimen/sb_text_size_14"
         android:fontFamily="@font/gothamblack"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imgProductImage"
@@ -44,7 +45,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/sb_size_6"
-        android:layout_marginBottom="@dimen/sb_size_12"
+        android:layout_marginBottom="@dimen/sb_size_16"
         android:scrollbars="none"
         android:padding="@dimen/sb_size_4"
         app:layout_constraintBottom_toBottomOf="parent"
