--- a/app/src/main/res/layout/new_toolbar.xml
+++ b/app/src/main/res/layout/new_toolbar.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/toolbar_logo"
+        app:srcCompat="@drawable/ic_bloom"
         android:contentDescription="@string/desc_app_logo" />
 
     <androidx.appcompat.widget.Toolbar
